name:              twitter-types
version:           0.3.0
license:           BSD3
license-file:      LICENSE
author:            Takahiro HIMURA
maintainer:        Takahiro HIMURA <taka@himura.jp>
synopsis:          Twitter JSON parser and types
description:       This package uses enumerator package for access Twitter API.
category:          Web, Enumerator
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/himura/twitter-types

source-repository head
  type: git
  location: git://github.com/himura/twitter-types.git

library
  ghc-options: -Wall

  build-depends:
    aeson >= 0.3.2.2
    , base >= 4 && < 5
    , bytestring
    , containers >= 0.4 && < 0.6
    , http-types
    , text

  exposed-modules:
    Web.Twitter.Types

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests, .
  main-is:           TypesTest.hs
  other-modules:     Fixtures
  build-depends:
    aeson
    , attoparsec
    , base
    , bytestring
    , containers
    , HUnit
    , shakespeare-text
    , template-haskell
    , test-framework >= 0.3.3 && < 0.9
    , test-framework-th-prime
    , test-framework-hunit
    , text
    , twitter-types

  ghc-options:       -Wall
